--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "kue": "^0.11.6",
     "load-grunt-tasks": "^5.1.0",
     "mongodb": "^4.2.1",
-    "mongoose": "^6.1.1",
+    "mongoose": "^6.5.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "node": "^16.14.2",
@@ -44,6 +44,7 @@
     "passport-local": "^1.0.0",
     "rotating-file-stream": "^3.0.3",
     "sass": "^1.47.0",
+    "serve-favicon": "^2.5.0",
     "socket.io": "^4.4.1"
   },
   "devDependencies": {
